food names added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <html>
     <body>
         <h2>Hello world</h2>
+1. Dosa
+2. Momos
+3. Biryani
+4. Frankie
+5. Pizza
+6. Panipuri
+7. Chhole Kulche
+8. Maggie
+9. PopCorn
+10. Puff
+11. Pasta
+12. Noodles
+13. Burger
+14. Samosa
+15. Hotdog
     </body>
 </html>
