--- a/new/index.html
+++ b/new/index.html
@@ -2,13 +2,19 @@
 <html>
 <body>
 
-<h2>My First JavaScript</h2>
-
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
-
-<p id="demo"></p>
-
+<h2>Laugh it out!!!!</h2>
+  
+<h3 id="setup"><h3>
+<h3 id="delivery"><h3>
+<script>
+  let req = new XMLHttpRequest();
+req.open("GET", "https://v2.jokeapi.dev/joke/Any", true);
+req.send();
+req.onload = () => {
+    let json = JSON.parse(req.response);
+  document.getElementById("setup").innerText=json.setup;
+  document.getElementById("setup").innerText=json.delivery;
+}
+</script>
 </body>
 </html> 
