--- a/new/index.html
+++ b/new/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h2>Laugh it out!!!!</h2>
-  
-<h3 id="setup"><h3>
+<h2>Laugh it out loud!!!!</h2>
+ <br><br> 
+<h2 id="setup"><h2>
 <h3 id="delivery"><h3>
 <script>
   let req = new XMLHttpRequest();
