Buttin ui changed

--- a/request-joke/index.html
+++ b/request-joke/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <style>
     body {
@@ -14,11 +15,12 @@
 </style>
 
 <body>
-    <h2>Laugh it out loud.!</h2>
     <br><br>
     <h2 id="setup"></h2>
     <p id="delivery"></p>
-    <button onclick='get_joke()'>Request Joke</button>
+    <button class="button-64" role="button" onclick='get_joke()'><span class="text">Next
+    </span></button>
+
 </body>
 <script src="js/source.js"></script>
 
