--- a/request-joke/index.html
+++ b/request-joke/index.html
@@ -20,7 +20,7 @@
     <p id="delivery"></p>
     <button class="button-64" role="button" onclick='get_joke()'><span class="text">Next
     </span></button>
-
+    <p id="developer">Developed by <a href="https://github.com/Amit-Chavda">Amit Chavda</p>
 </body>
 <script src="js/source.js"></script>
 
